test/zinc_source/compile_errors/functions/18_ufcs_zero_parameter.zn
// expected-error: requires at least one parameter for the UFCS receiver

fn ping() {
    return 1
}

fn main() {
    value = 1
    print(value.ping())
}
